--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": ".",
+  "name": "aspire",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev": "vite dev --port 3001",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest run",
@@ -18,41 +18,42 @@
     "db:seed": "dotenv -e .env.local -- prisma db seed"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.3",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-query": "^5.66.5",
-    "@tanstack/react-query-devtools": "^5.84.2",
-    "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/router-plugin": "^1.132.0",
-    "lucide-react": "^0.544.0",
-    "nitro": "latest",
-    "pg": "^8.11.0",
-    "prisma": "^6.16.3",
+    "@base-ui-components/react": "^1.0.0-beta.7",
+    "@prisma/client": "^7.0.1",
+    "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-devtools": "^0.8.2",
+    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-router": "^1.139.10",
+    "@tanstack/react-router-devtools": "^1.139.10",
+    "@tanstack/react-router-ssr-query": "^1.139.10",
+    "@tanstack/react-start": "^1.139.10",
+    "@tanstack/router-plugin": "^1.139.10",
+    "lucide-react": "^0.555.0",
+    "nitro": "^3.0.1-alpha.1",
+    "pg": "^8.16.3",
+    "prisma": "^7.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.1.17",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.4",
+    "@biomejs/biome": "2.3.8",
     "@tanstack/devtools-vite": "^0.3.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.10.2",
-    "@types/pg": "^8.10.0",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "dotenv-cli": "^10.0.0",
-    "jsdom": "^27.0.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "dotenv-cli": "^11.0.0",
+    "jsdom": "^27.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "vite": "^7.1.7",
-    "vitest": "^3.0.5",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.14",
     "web-vitals": "^5.1.0"
   },
   "prisma": {
