--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,49 +18,49 @@
     "db:seed": "dotenv -e .env.local -- prisma db seed"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-beta.7",
-    "@prisma/client": "^7.0.1",
-    "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/react-devtools": "^0.8.2",
-    "@tanstack/react-form": "^1.27.0",
-    "@tanstack/react-query": "^5.90.11",
-    "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router": "^1.139.12",
-    "@tanstack/react-router-devtools": "^1.139.12",
-    "@tanstack/react-router-ssr-query": "^1.139.12",
-    "@tanstack/react-start": "^1.139.12",
-    "@tanstack/router-plugin": "^1.139.12",
-    "better-auth": "^1.4.5",
+    "@base-ui-components/react": "^1.0.0-rc.0",
+    "@prisma/client": "^7.2.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-devtools": "^0.9.2",
+    "@tanstack/react-form": "^1.27.7",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "@tanstack/react-router": "^1.147.3",
+    "@tanstack/react-router-devtools": "^1.149.0",
+    "@tanstack/react-router-ssr-query": "^1.147.3",
+    "@tanstack/react-start": "^1.149.1",
+    "@tanstack/router-plugin": "^1.149.0",
+    "better-auth": "^1.4.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.555.0",
+    "lucide-react": "^0.562.0",
     "nitro": "^3.0.1-alpha.1",
     "pg": "^8.16.3",
-    "prisma": "^7.0.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "recharts": "^3.5.1",
+    "prisma": "^7.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
-    "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.13"
+    "tailwindcss": "^4.1.18",
+    "vite-tsconfig-paths": "^6.0.4",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.8",
-    "@tanstack/devtools-vite": "^0.3.11",
+    "@biomejs/biome": "2.3.11",
+    "@tanstack/devtools-vite": "^0.4.1",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^24.10.1",
-    "@types/pg": "^8.15.6",
-    "@types/react": "^19.2.7",
+    "@testing-library/react": "^16.3.1",
+    "@types/node": "^25.0.6",
+    "@types/pg": "^8.16.0",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "dotenv-cli": "^11.0.0",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "vite": "^7.2.4",
-    "vitest": "^4.0.14",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.17",
     "web-vitals": "^5.1.0"
   },
   "prisma": {
