--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "hono": "^4.11.3",
     "ioredis": "^5.9.1",
     "jsonwebtoken": "^9.0.3",
+    "openai": "^6.16.0",
     "pg": "^8.16.3",
     "zod": "^4.3.5"
   },
